--- a/src/components/contactModule/Contact.module.scss
+++ b/src/components/contactModule/Contact.module.scss
@@ -128,7 +128,7 @@
 
 .contactModule {
   background-color: $color-primary;
-  padding: 4rem 2rem 4rem;
+  padding: 4rem calc(1% + 20px) 4rem 2rem;
   overflow: hidden;
 }
 
