--- a/src/styles/utils/_structure.scss
+++ b/src/styles/utils/_structure.scss
@@ -1,3 +1,10 @@
 $offset: 20px;
 
 $content-max: 1200px;
+
+// Breakpoints
+$screen-xl: 1400px;
+$screen-lrg: 1200px;
+$screen-md: 992px;
+$screen-sm: 768px;
+$screen-xs: 480px;
